--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 <body>
+<h1>Event Driven Toyland</h1>
 
-  <!-- Add your site or application content here -->
-  <div id="app">
-    <h1>Event Driven Toyland</h1>
-    <div id="message">
-      <h2>The message</h2>
-    </div>
-
-    <div>
-      <button id="button">Click Me</button>
-      <input type="checkbox" id="background-toggle"> <label for="background-toggle">Change Background?</label>
-    </div>
+<div id="app">
+  <div id="button-component">
+    <button id="button">Click Me</button>
   </div>
+  <div>
+    <label for="background-toggle">Awesome Mode</label><input type="checkbox" id="background-toggle">
+  </div>
+  <div>
+    <label for="name">What's Your Name</label><input type="text" name="name" id="name">
+  </div>
+</div>
+
 </body>
 <script type="module" src="index.js"></script>
 
